--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ INFURA_KEY=
 
 # valid across chains
 UNISWAP_V3_ROUTER=0x68b3465833fb72A70ecDF485E0e4C7bD8665Fc45
+UNISWAP_UNIVERAL_ROUTER=0x4648a43B2C14Da09FdF82B161150d3F634f40491
 UNISWAP_V3_FACTORY=0x1F98431c8aD98523631AE4a59f267346ea31F984
 
 # goerli specific - must change for mainnet!
